# quarkup

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-pages.yml  vscode-extension.yml
example/: demo.qu
src/: ast.rs  html.rs  lexer.rs  lib.rs  main.rs  parser.rs  wasm.rs
tests/: compile.rs
tests/snapshots/: example_demo.html
vscode-extension/: .gitignore  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json
vscode-extension/scripts/: build-assets.sh  sample.qu  test-grammar.js
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: quarkup.tmLanguage.json
web/: build.sh  index.html
