[package]
name = "quarkup"
version = "0.1.0"
edition = "2024"

[lib]
name = "quarkup"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "quarkup"
path = "src/main.rs"

[dependencies]
base64 = "0.22.0"
# regex-fancy is a pure-Rust regex backend (no C/oniguruma dependency), which
# keeps the crate compilable for wasm32-unknown-unknown in addition to native.
syntect = { version = "5.2.0", default-features = false, features = [
    "default-syntaxes",
    "default-themes",
    "html",
    "parsing",
    "regex-fancy",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4", features = ["derive"] }
# Spawns an OS thread to render LaTeX, which wasm32-unknown-unknown cannot
# support; the wasm build falls back to rendering raw LaTeX (see html.rs).
mathjax-svg-rs = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
